[package]
name = "kvs"
authors = ["wtf <wtf@wtf.com>"]
description = "A key-value store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = ["derive"]}
failure = "^0.1"
serde = { version = "^1.0.100", features = ["derive"] }
serde_json = "^1.0.79"
log = "^0.4"
env_logger = "^0.9"
sled = "^0.34.7"

[dev-dependencies]
assert_cmd = "^2.0"
criterion = "0.3"
predicates = "^2.0"
rand = { version = "^0.8", features = ["small_rng"] }
tempfile = "3"
walkdir = "2"

[[bench]]
name = "engine_bench"
harness = false