[package]
name = "kvs"
authors = ["wtf <wtf@wtf.com>"]
description = "A key-value store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = ["derive"]}
failure = "^0.1"
serde = { version = "^1.0.100", features = ["derive"] }
serde_json = "^1.0.79"
log = "^0.4"
env_logger = "^0.9"
sled = "^0.34.7"
crossbeam = "0.8.0"
rayon = "^1.5"
num_cpus = "1.0"
tokio = {version = "^1.17.0", features = ["full"]}
tokio-util = {version = "^0.7.1", features = ["full"]}
tokio-stream = "^0.1.7"
bytes = "^1.1"
async-stream = "^0.3.3"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
libc = "^0.2"

[dependencies.crossbeam-skiplist]
git = "https://github.com/crossbeam-rs/crossbeam.git"
tag = "crossbeam-0.8.0"

[dev-dependencies]
assert_cmd = "^2.0"
criterion = "0.3"
crossbeam-utils = "0.8.7"
predicates = "^2.0"
rand = { version = "^0.8", features = ["small_rng"] }
tempfile = "3"
walkdir = "2"
panic-control = "0.1.4"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
pkg-config = "0.3.25"

[[bench]]
name = "engine_bench"
harness = false
